--- a/1213/src/common/css/reset.css
+++ b/1213/src/common/css/reset.css
@@ -18,6 +18,7 @@ a { color:#666; text-decoration:none; }
 *{box-sizing:border-box}
 body,html{
     height: 100%;
+	background:#e9ecf1 ;
     overflow-x: hidden;
 }
 
